# tech-news

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
app/: alembic.ini  main.py
app/migrations/: env.py
app/routers/: __init__.py
app/services/: base.py  item.py
app/tests/: conftest.py
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  logger.py  redis.py
backend/app/models/: __init__.py  item.py
backend/app/routers/: item.py  news.py
backend/app/schemas/: item.py  news.py
backend/app/services/: news_service.py
frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  setup-environments.sh
frontend/src/: index.html  main.ts
frontend/src/app/: app.spec.ts  app.ts
frontend/src/app/features/news/models/: news.model.ts
frontend/src/app/features/news/pages/news-dashboard/: news-dashboard.component.html  news-dashboard.component.scss  news-dashboard.component.ts
frontend/src/app/features/news/services/: news.service.ts
